tests/e2e/scenarios/negative/_fixtures/dup_export_a.ks
export fun dup(): Int = 1
